milewski/aut.log
GHCi, version 9.2.4: https://www.haskell.org/ghc/  :? for help
ghci> [1 of 3] Compiling Numbers          ( Numbers.hs, interpreted )
[2 of 3] Compiling Trees            ( Trees.hs, interpreted )
[3 of 3] Compiling Operads          ( Operads.hs, interpreted )

Operads.hs:76:18: error:
    • Couldn't match expected type: Trees m
                  with actual type: MoveTree m
    • In the expression: Fan ((mv, tt) :+ trees)
      In the expression:
        let
          tt = compose t l_frag
          (Fan trees) = compose (Fan ts) k_frag
        in Fan ((mv, tt) :+ trees)
      In the second argument of ‘($)’, namely
        ‘(\ (l_frag, k_frag)
            -> let
                 tt = compose t l_frag
                 (Fan trees) = compose (Fan ts) k_frag
               in Fan ((mv, tt) :+ trees))’
    • Relevant bindings include
        frt :: Forest MoveTree m n (bound at Operads.hs:67:33)
        compose :: MoveTree n -> Forest MoveTree m n -> MoveTree m
          (bound at Operads.hs:65:3)
   |
76 |               in Fan ((mv, tt) :+ trees)
   |                  ^^^^^^^^^^^^^^^^^^^^^^^
Failed, two modules loaded.
ghci> Leaving GHCi.
